--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -15,28 +15,31 @@ name = "porter_app_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
 [build-dependencies]
-tauri-build = { version = "2", features = [] }
+tauri-build = { version = "2.0", features = [] }
 
 [dependencies]
-tauri = { version = "2", features = ["shell-open"] }
-tauri-plugin-shell = "2"
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
+tauri = { version = "2.0", features = [] }
+tauri-plugin-shell = "2.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 tokio = { version = "1.35", features = ["full"] }
 chrono = { version = "0.4", features = ["serde"] }
 anyhow = "1.0"
 thiserror = "1.0"
 
 # System monitoring
-sysinfo = "0.30"
+sysinfo = "0.31"
 
 # Platform-specific
 [target.'cfg(windows)'.dependencies]
 windows = { version = "0.52", features = [
   "Win32_Foundation",
+  "Win32_Networking",
+  "Win32_Networking_WinSock",
   "Win32_NetworkManagement_IpHelper",
   "Win32_System_Threading",
   "Win32_System_ProcessStatus",
+  "Win32_Security",
 ] }
 
 [target.'cfg(target_os = "macos")'.dependencies]
